Hid the scroll bar in the chat window

--- a/MindEaseChatbot/src/app/globals.css
+++ b/MindEaseChatbot/src/app/globals.css
@@ -50,7 +50,7 @@ main {
 /* Chat container */
 .chat-container {
   height: 85vh;
-  overflow-y: auto;
+  overflow-y: scroll;
   margin-bottom: 20px;
   padding: 10px;
   border-radius: 10px;
